--- a/chess-boards/index.html
+++ b/chess-boards/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="games">
+        <!-- checkers -->
         <section class="game game-checkers">
             <h1 class="game-header">Princess Bubblegum</h1>
+            <!-- captured box -->
             <div class="captured">
                 <h2 class="captured-header">Captured Pieces</h2>
                 <div class="captured-set">
@@ -34,6 +36,7 @@
                     </div>
                 </div>
             </div>
+            <!-- board -->
             <div class="board-wrapper">
                 <h2 class="board-header">Checkers</h2>
                 <div class="board">
@@ -120,7 +123,7 @@
                 </div>
             </div>
         </section>
-        <!-- "game-active" and "game-over" are status classes -->
+        <!-- chess -->
         <section class="game game-chess game-active">
             <h1 class="game-header">Your Turn</h1>
             <div class="captured">
@@ -247,6 +250,7 @@
             </div>
 
         </section>
+        <!-- othello -->
         <section class="game game-othello game-over">
             <h1 class="game-header">Princess Bubblegum</h1>
             <div class="captured">
